# velodyne_camera_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: coloring_pointcloud.rviz  projection_pointcloud.rviz  sensor_fusion.rviz
include/velodyne_camera_calibration/: coloring.h
launch/: coloring_pointcloud.launch  projection_pointcloud.launch  realsense.launch  sensor_fusion.launch  velodyne_2_realsense.launch
scripts/: bagrec.sh
src/: camera_info_publisher.cpp  coloring_pointcloud.cpp  projection_pointcloud.cpp  sensor_fusion.cpp
